--- a/.github/workflows/ci-jdk11.yaml
+++ b/.github/workflows/ci-jdk11.yaml
@@ -14,25 +14,26 @@
 # limitations under the License.
 ################################################################################
 
-name: Fluss CI on JDK 8
+name: Fluss CI on JDK 11
 
 on:
-  push:
-  pull_request:
-    paths-ignore:
-      - 'docs/**'
-      - '**/*.md'
+  issue_comment:
+    types: [created, edited, deleted]
+
+  # daily run
+  schedule:
+    - cron: "0 0 * * *"
 
 env:
-  JDK_VERSION: 8
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event_name }}-${{ github.event.number || github.run_id }}
-  cancel-in-progress: true
+  JDK_VERSION: 11
 
 jobs:
   build:
+    if: |
+      github.event_name == 'schedule' ||
+      (contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/jdk11'))
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
