--- a/.github/workflows/ci-jdk11.yaml
+++ b/.github/workflows/ci-jdk11.yaml
@@ -14,24 +14,25 @@
 # limitations under the License.
 ################################################################################
 
-name: Fluss CI on JDK 11
+name: Tests on JDK 11
 
 on:
+  push:
   issue_comment:
     types: [created, edited, deleted]
 
   # daily run
-  schedule:
-    - cron: "0 0 * * *"
+#  schedule:
+#    - cron: "0 0 * * *"
 
 env:
   JDK_VERSION: 11
 
 jobs:
   build:
-    if: |
-      github.event_name == 'schedule' ||
-      (contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/jdk11'))
+#    if: |
+#      github.event_name == 'schedule' ||
+#      (contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/jdk11'))
     runs-on: ubuntu-latest
 
     steps:
@@ -45,7 +46,6 @@ jobs:
       - name: Build
         run: mvn -T 1C -B clean install -DskipTests
       - name: Test
-        timeout-minutes: 60
         run: |
           mvn -T 1C -B verify
         env:
