--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,7 @@
 
 name: Tests on JDK 8
 
+
 on:
   push:
   pull_request:
@@ -32,7 +33,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: aliyun
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
