--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,7 +33,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: aliyun
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
