--- a/.github/workflows/ci-jdk11.yaml
+++ b/.github/workflows/ci-jdk11.yaml
@@ -33,7 +33,7 @@ jobs:
 #    if: |
 #      github.event_name == 'schedule' ||
 #      (contains(github.event.comment.html_url, '/pull/') && contains(github.event.comment.body, '/jdk11'))
-    runs-on: aliyun
+    runs-on: self-hosted
 
     steps:
       - name: Checkout code
